--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,11 @@ scikit-learn==1.3.0
 joblib==1.3.0
 pyyaml==6.0
 tqdm==4.65.0
+
+# GPU acceleration (optional)
+# Install CuPy for NVIDIA GPU support:
+# pip install cupy-cuda11x  # For CUDA 11.x
+# pip install cupy-cuda12x  # For CUDA 12.x
+
+# OR install PyTorch with CUDA support:
+# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
