--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ scikit-learn==1.3.0
 joblib==1.3.0
 pyyaml==6.0
 tqdm==4.65.0
+matplotlib==3.7.1
 
 # GPU acceleration (optional)
 # Install CuPy for NVIDIA GPU support:
