--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,10 @@ joblib==1.3.0
 pyyaml==6.0
 tqdm==4.65.0
 matplotlib==3.7.1
+cupy-cuda12x==13.5.1
+fastrlock>=0.5
 
-# GPU acceleration (optional)
-# Install CuPy for NVIDIA GPU support:
-# pip install cupy-cuda11x  # For CUDA 11.x
-# pip install cupy-cuda12x  # For CUDA 12.x
-
+# Alternative GPU support:
+# pip install cupy-cuda11x  # For CUDA 11.x (instead of cupy-cuda12x)
 # OR install PyTorch with CUDA support:
 # pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
